Modify them to be fit for a lambda function

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "1.0.0",
   "main": "scrape.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "zip": "zip -r jaccs-scraper.zip ./*"
   },
   "repository": {
     "type": "git",
